--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
 </head>
 <body class="cyber-bg min-h-screen">
 
-    <div id="app" class="flex flex-col h-screen">
+    <!-- Loading Overlay -->
+    <div id="loading-overlay" class="fixed inset-0 bg-black/90 flex flex-col items-center justify-center z-[100]">
+        <svg class="animate-spin h-10 w-10 text-cyan-500 mb-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+            <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+        </svg>
+        <p class="text-cyan-300 text-lg">システムを初期化しています...</p>
+    </div>
+
+    <div id="app" class="flex flex-col h-screen opacity-0 transition-opacity duration-500">
         <!-- ヘッダー -->
         <header class="bg-black/50 backdrop-blur-sm border-b border-cyan-500/30 p-4 flex justify-between items-center z-20">
             <h1 class="text-2xl font-bold neon-text flex items-center gap-2">
