--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </div>
 
     <!-- Editor Modal -->
-    <div id="editor-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-50 hidden backdrop-blur-md">
-        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-6xl h-[95vh] flex flex-col transform scale-95 opacity-0 transition-all duration-300">
+    <div id="editor-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-50 backdrop-blur-md">
+        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-6xl h-[95vh] flex flex-col transform">
             <!-- Modal Header -->
             <div class="p-4 border-b border-gray-700 flex justify-between items-center flex-shrink-0">
                 <h2 class="text-xl font-bold text-white font-display">マニュアルの編集</h2>
@@ -154,7 +154,7 @@
     </div>
     
     <!-- Version History Modal -->
-    <div id="history-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] hidden backdrop-blur-md">
+    <div id="history-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] backdrop-blur-md">
         <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-2xl h-[70vh] flex flex-col">
             <div class="p-4 border-b border-gray-700 flex justify-between items-center">
                 <h2 class="text-xl font-bold text-white font-display">バージョン履歴</h2>
@@ -165,7 +165,7 @@
     </div>
 
     <!-- Category Management Modal -->
-    <div id="category-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] hidden backdrop-blur-md">
+    <div id="category-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] backdrop-blur-md">
         <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-lg flex flex-col">
             <div class="p-4 border-b border-gray-700 flex justify-between items-center">
                 <h2 class="text-xl font-bold text-white font-display">カテゴリ管理</h2>
