--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 </head>
 <body class="bg-black text-gray-300 font-serif">
 
-    <!-- Main App -->
     <div id="app" class="flex h-screen">
         <!-- Sidebar -->
         <aside class="w-72 bg-black border-r border-gray-800 flex flex-col p-5">
@@ -62,17 +61,22 @@
 
         <!-- Main Content -->
         <main class="flex-1 flex flex-col bg-gray-900/50">
+            <!-- Main Header -->
             <div class="bg-black/30 backdrop-blur-sm border-b border-gray-800 p-4 flex items-center">
                 <div class="relative w-full max-w-lg">
                     <i data-lucide="search" class="absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 h-5 w-5"></i>
-                    <input type="text" id="search-input" placeholder="全文検索..." class="w-full bg-gray-900 border border-gray-700 rounded-full py-2.5 pl-12 pr-4 text-white focus:outline-none focus:ring-2 focus:ring-amber-500 transition-all">
+                    <input type="text" id="search-input" placeholder="マニュアルを検索..." class="w-full bg-gray-900 border border-gray-700 rounded-full py-2.5 pl-12 pr-4 text-white focus:outline-none focus:ring-2 focus:ring-amber-500 transition-all">
                 </div>
             </div>
+
+            <!-- Manuals List -->
             <div id="manuals-list-container" class="flex-1 p-8 overflow-y-auto">
                 <div id="loader" class="flex justify-center items-center h-full">
                     <div class="animate-spin rounded-full h-16 w-16 border-t-2 border-b-2 border-amber-500"></div>
                 </div>
-                <div id="manuals-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8"></div>
+                <div id="manuals-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8">
+                    <!-- Manual cards will be dynamically inserted here -->
+                </div>
                 <div id="empty-state" class="hidden text-center text-gray-600 mt-20">
                     <i data-lucide="file-question" class="mx-auto h-20 w-20 mb-6"></i>
                     <h3 class="text-2xl font-semibold text-gray-400 font-display">マニュアルがありません</h3>
@@ -85,12 +89,17 @@
     <!-- Editor Modal -->
     <div id="editor-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-50 backdrop-blur-md">
         <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-6xl h-[95vh] flex flex-col transform">
+            <!-- Modal Header -->
             <div class="p-4 border-b border-gray-700 flex justify-between items-center flex-shrink-0">
                 <h2 class="text-xl font-bold text-white font-display">マニュアルの編集</h2>
-                <div id="last-updated-display" class="text-xs text-gray-500"></div>
-                <button id="close-modal-btn" class="text-gray-500 hover:text-white transition-colors"><i data-lucide="x" class="h-7 w-7"></i></button>
+                <div id="active-collaborators" class="flex items-center text-xs text-gray-400"></div>
+                <button id="close-modal-btn" class="text-gray-500 hover:text-white transition-colors">
+                    <i data-lucide="x" class="h-7 w-7"></i>
+                </button>
             </div>
+            <!-- Modal Body -->
             <div class="p-6 flex-1 flex flex-row gap-6 overflow-hidden">
+                <!-- Main Editor Area -->
                 <div class="flex-1 flex flex-col overflow-hidden">
                     <input type="hidden" id="manual-id">
                     <div class="mb-4">
@@ -100,7 +109,9 @@
                     <div class="mb-4">
                         <label for="manual-category-select" class="block text-sm font-medium text-gray-400 mb-1">カテゴリ</label>
                         <div class="relative">
-                           <select id="manual-category-select" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-2.5 text-white focus:outline-none focus:ring-2 focus:ring-amber-500 appearance-none"></select>
+                           <select id="manual-category-select" class="w-full bg-gray-800 border border-gray-700 rounded-lg p-2.5 text-white focus:outline-none focus:ring-2 focus:ring-amber-500 appearance-none">
+                               <!-- Category options will be dynamically inserted here -->
+                           </select>
                            <i data-lucide="chevron-down" class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 h-5 w-5 pointer-events-none"></i>
                         </div>
                     </div>
@@ -109,22 +120,30 @@
                         <div id="editor" class="bg-gray-800 rounded-t-lg flex-grow h-0"></div>
                     </div>
                 </div>
+                <!-- Side Panel (Attachments & History) -->
                 <div class="w-80 flex-shrink-0 flex flex-col gap-6">
-                    <div class="bg-gray-800/50 rounded-lg p-4 flex flex-col">
-                        <h3 class="font-bold text-white mb-3 flex items-center"><i data-lucide="mouse-pointer-click" class="h-4 w-4 mr-2"></i>リアクション</h3>
-                        <div id="reactions-container" class="flex gap-2 flex-wrap"></div>
-                    </div>
-                    <div class="bg-gray-800/50 rounded-lg p-4 flex flex-col">
+                    <!-- Attachments & Actions -->
+                    <div class="bg-gray-800/50 rounded-lg p-4 flex flex-col h-full">
                         <h3 class="font-bold text-white mb-3 flex items-center"><i data-lucide="settings-2" class="h-4 w-4 mr-2"></i>アクション</h3>
-                        <div class="space-y-2">
+                        <div class="space-y-2 mb-6">
                            <button id="history-btn" class="w-full text-left text-sm py-2 px-3 rounded-md text-gray-300 hover:bg-gray-700 transition-colors flex items-center"><i data-lucide="history" class="h-4 w-4 mr-2"></i>バージョン履歴</button>
                            <button id="pdf-export-btn" class="w-full text-left text-sm py-2 px-3 rounded-md text-gray-300 hover:bg-gray-700 transition-colors flex items-center"><i data-lucide="file-down" class="h-4 w-4 mr-2"></i>PDFにエクスポート</button>
                         </div>
+                        <h3 class="font-bold text-white mb-3 flex items-center"><i data-lucide="paperclip" class="h-4 w-4 mr-2"></i>添付ファイル</h3>
+                        <div id="attachments-list" class="flex-grow overflow-y-auto space-y-2 pr-2"></div>
+                        <label class="mt-3 cursor-pointer bg-gray-700 hover:bg-gray-600 text-center text-sm py-2 px-3 rounded-md text-gray-300 transition-colors">
+                            ファイルを追加
+                            <input type="file" id="file-upload-input" class="hidden">
+                        </label>
                     </div>
                 </div>
             </div>
+            <!-- Modal Footer -->
             <div class="p-4 bg-gray-900 border-t border-gray-700 flex justify-end items-center space-x-4 flex-shrink-0">
-                 <button id="delete-manual-btn" class="text-red-500 hover:text-red-400 font-semibold transition-colors flex items-center mr-auto py-2 px-4 rounded-lg hover:bg-red-500/10"><i data-lucide="trash-2" class="mr-2 h-4 w-4"></i>削除</button>
+                 <button id="delete-manual-btn" class="text-red-500 hover:text-red-400 font-semibold transition-colors flex items-center mr-auto py-2 px-4 rounded-lg hover:bg-red-500/10">
+                    <i data-lucide="trash-2" class="mr-2 h-4 w-4"></i>
+                    削除
+                </button>
                 <button id="cancel-btn" class="bg-gray-600 hover:bg-gray-500 text-white font-bold py-2 px-5 rounded-lg transition-colors">キャンセル</button>
                 <button id="save-manual-btn" class="bg-amber-500 hover:bg-amber-400 text-black font-bold py-2 px-5 rounded-lg transition-colors flex items-center">
                     <span id="save-btn-text">保存</span>
@@ -136,12 +155,34 @@
     
     <!-- Version History Modal -->
     <div id="history-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] backdrop-blur-md">
-        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-2xl h-[70vh] flex flex-col"><div class="p-4 border-b border-gray-700 flex justify-between items-center"><h2 class="text-xl font-bold text-white font-display">バージョン履歴</h2><button id="close-history-modal-btn" class="text-gray-500 hover:text-white transition-colors"><i data-lucide="x" class="h-7 w-7"></i></button></div><div id="history-list" class="flex-grow p-6 overflow-y-auto space-y-3"></div></div>
+        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-2xl h-[70vh] flex flex-col">
+            <div class="p-4 border-b border-gray-700 flex justify-between items-center">
+                <h2 class="text-xl font-bold text-white font-display">バージョン履歴</h2>
+                <button id="close-history-modal-btn" class="text-gray-500 hover:text-white transition-colors"><i data-lucide="x" class="h-7 w-7"></i></button>
+            </div>
+            <div id="history-list" class="flex-grow p-6 overflow-y-auto space-y-3"></div>
+        </div>
     </div>
 
     <!-- Category Management Modal -->
     <div id="category-modal" class="fixed inset-0 bg-black/80 flex items-center justify-center z-[60] backdrop-blur-md">
-        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-lg flex flex-col"><div class="p-4 border-b border-gray-700 flex justify-between items-center"><h2 class="text-xl font-bold text-white font-display">カテゴリ管理</h2><button id="close-category-modal-btn" class="text-gray-500 hover:text-white transition-colors"><i data-lucide="x" class="h-7 w-7"></i></button></div><div class="p-6"><div class="grid grid-cols-2 gap-2 mb-4"><input type="text" id="new-category-name" placeholder="カテゴリ名" class="bg-gray-800 border border-gray-700 rounded-lg p-2.5 text-white focus:outline-none focus:ring-2 focus:ring-amber-500"><input type="text" id="new-category-furigana" placeholder="ふりがな (ひらがな)" class="bg-gray-800 border border-gray-700 rounded-lg p-2.5 text-white focus:outline-none focus:ring-2 focus:ring-amber-500"></div><button id="add-category-btn" class="w-full bg-amber-500 hover:bg-amber-400 text-black font-bold py-2 px-4 rounded-lg transition-colors flex items-center justify-center mb-4"><i data-lucide="plus" class="h-5 w-5 mr-2"></i>追加</button><div id="category-manager-list" class="max-h-80 overflow-y-auto space-y-2 pr-2"></div></div></div>
+        <div class="bg-gray-900 rounded-xl shadow-2xl w-full max-w-lg flex flex-col">
+            <div class="p-4 border-b border-gray-700 flex justify-between items-center">
+                <h2 class="text-xl font-bold text-white font-display">カテゴリ管理</h2>
+                <button id="close-category-modal-btn" class="text-gray-500 hover:text-white transition-colors"><i data-lucide="x" class="h-7 w-7"></i></button>
+            </div>
+            <div class="p-6">
+                <div class="flex gap-2 mb-4">
+                    <input type="text" id="new-category-input" placeholder="新しいカテゴリ名" class="flex-grow bg-gray-800 border border-gray-700 rounded-lg p-2.5 text-white focus:outline-none focus:ring-2 focus:ring-amber-500">
+                    <button id="add-category-btn" class="bg-amber-500 hover:bg-amber-400 text-black font-bold py-2 px-4 rounded-lg transition-colors flex items-center">
+                        <i data-lucide="plus" class="h-5 w-5"></i>
+                    </button>
+                </div>
+                <div id="category-manager-list" class="max-h-80 overflow-y-auto space-y-2 pr-2">
+                    <!-- Category manager items go here -->
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Firebase SDK -->
