--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- Google Fonts & Icons -->
+    <link rel="shortcut icon" href="https://whispering-longan-7ae.notion.site/image/attachment%3Afea7396a-49f7-48e5-86e1-f6f4a6691609%3AGemini_Generated_Image_jmjpc3jmjpc3jmjp_(1).ico?table=block&id=24c963f3-cf5b-8086-b32b-d257f8f54cfa&spaceId=6a5b5b21-cf98-4ba8-9055-06ff5ea77222&userId=&cache=v2" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://whispering-longan-7ae.notion.site/image/attachment%3Ae6270b0b-1e3a-42b6-a0c1-850f65202356%3A916b0c08-8c78-4f8d-9866-fdca347037c4.png?table=block&id=24c963f3-cf5b-8035-9bf0-c525673bf66d&spaceId=6a5b5b21-cf98-4ba8-9055-06ff5ea77222&width=480&userId=&cache=v2" sizes="180x180">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Noto+Sans+JP:wght@300;400;500&display=swap" rel="stylesheet">
